; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_seatop_default.c_find_resize_edge.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_seatop_default.c_find_resize_edge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_container = type { i32 }
%struct.wlr_surface = type { i32 }
%struct.sway_cursor = type { i32 }

@WLR_EDGE_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sway_container*, %struct.wlr_surface*, %struct.sway_cursor*)* @find_resize_edge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_resize_edge(%struct.sway_container* %0, %struct.wlr_surface* %1, %struct.sway_cursor* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sway_container*, align 8
  %6 = alloca %struct.wlr_surface*, align 8
  %7 = alloca %struct.sway_cursor*, align 8
  %8 = alloca i32, align 4
  store %struct.sway_container* %0, %struct.sway_container** %5, align 8
  store %struct.wlr_surface* %1, %struct.wlr_surface** %6, align 8
  store %struct.sway_cursor* %2, %struct.sway_cursor** %7, align 8
  %9 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %10 = load %struct.wlr_surface*, %struct.wlr_surface** %6, align 8
  %11 = load %struct.sway_cursor*, %struct.sway_cursor** %7, align 8
  %12 = call i32 @find_edge(%struct.sway_container* %9, %struct.wlr_surface* %10, %struct.sway_cursor* %11)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %26

15:                                               ; preds = %3
  %16 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %17 = call i32 @container_is_floating(%struct.sway_container* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %26, label %19

19:                                               ; preds = %15
  %20 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %21 = load i32, i32* %8, align 4
  %22 = call i64 @edge_is_external(%struct.sway_container* %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %19
  %25 = load i32, i32* @WLR_EDGE_NONE, align 4
  store i32 %25, i32* %4, align 4
  br label %28

26:                                               ; preds = %19, %15, %3
  %27 = load i32, i32* %8, align 4
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %26, %24
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @find_edge(%struct.sway_container*, %struct.wlr_surface*, %struct.sway_cursor*) #1

declare dso_local i32 @container_is_floating(%struct.sway_container*) #1

declare dso_local i64 @edge_is_external(%struct.sway_container*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
